# py-rtx-remix

./: .gitignore  LICENSE  README.md  TO-DO.md  api_data_types.py  build_remixapi.bat  components.py  core.py  example.py  exceptions.py  pyproject.toml  remixapi.c  requirements-test.txt  run_pytest_with_coverage.bat  simple_obj_importer.py  test.dds  windowing.py
docs/images/: code_sample.jpg~  main_page.jpg~
src/py_rtx_remix/: api_data_types.py  components.py  core.py  example.py  simple_obj_importer.py
tests/e2e/: test_lights_on_triangle.py
tests/integration/: test_core.py
tests/unit/: test_api_data_types.py  test_components.py  test_core.py
